maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: not found: value isDirectionFree
    if(isDirectionFree(Direction.NORTH)&&sommeAngle=0){
       ^Escaper:37: error: not found: value sommeAngle
    sommeAngle=sommeAngle+1
    ^Escaper:40: error: not found: value sommmeAngle
    sommmeAngle=sommeAngle-1
    ^